testing meta tags

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <meta property="og:description"
     content="generate patterns and palettes from your twitter profile picture" />
   <meta property="og:site_name"
-    content="nabei">
+    content="twittern">
+  <meta property="og:image"
+    content="https://ia.media-imdb.com/images/rock.jpg" />
   <meta property="og:locale"
     content="en_US">
   <link href="./scss/index.scss"
