--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         href="./profile.html">PROFILE</a>
       <a class="button"
         href="./pattern.html">PATTERN</a>
+      <a class="button"
+        href="./dithering.html">DITHERING</a>
     </section>
   </div>
 </body>
